# glory

./: Makefile  README.md  days.txt  glory.cabal  mac-app.sh  stack.yaml
Glory.app/Contents/: Info.plist
Glory.app/Contents/MacOS/: .gitignore
en-RK/data/: Loc.csv  Text.xml  UsedChars.txt
glory-resources/: glory-resources.cabal
glory-resources/remote/: index.html
glory-resources/src/: Resources.hs
remote/: index.html
src/: Audio.hs  Core.hs  Draw.hs  Main.hs  SDLMixer.chs  SDLNice.hs  SDLVty.hs  Update.hs
