name:                 glory
version:              0.1.0.0
author:               Michael Tolly
maintainer:           miketolly@gmail.com
build-type:           Simple
cabal-version:        >= 1.10
extra-source-files:
  remote/index.html

executable glory
  main-is:              Main.hs
  other-modules:
    Core
    Draw
    Update
  build-depends:

    base >= 4.7 && < 4.8
    , sdl2 >= 1.3.1 && < 1.4
    , transformers >= 0.4
    , containers
    , vty >= 5.2.9
    , random-shuffle >= 0.0.4
    , random
    , MonadRandom
    , time
    , warp
    , wai
    , http-types
    , text
    , bytestring

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded
