name:                 glory
version:              0.1.0.0
author:               Michael Tolly
maintainer:           miketolly@gmail.com
build-type:           Simple
cabal-version:        >= 1.10
extra-source-files:
  remote/index.html
  sound/*.wav
  sound/papers/*.wav
  sound/pinball/*.WAV

executable glory
  main-is:              Main.hs
  other-modules:
    Core
    Draw
    Update
    SDLMixer
    SDLNice
    Audio
    SDLVty
  build-depends:

    base >= 4.7 && < 4.8
    , sdl2 >= 1.3.1 && < 1.4
    , transformers >= 0.4
    , containers
    , random-shuffle >= 0.0.4
    , MonadRandom
    , time
    , warp
    , wai
    , http-types
    , text
    , bytestring
    , stm
    , file-embed
    , network-info
    , sdl2-ttf

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded
  extra-libraries:      SDL2_mixer
