name:                 glory
version:              0.1.0.0
author:               Michael Tolly
maintainer:           miketolly@gmail.com
build-type:           Simple
cabal-version:        >= 1.10

flag SDLDisplay
  description: use SDL video instead of terminal curses output
  default: False

executable glory
  main-is:              Main.hs
  other-modules:
    Core
    Draw
    Update
    SDLMixer
    SDLNice
    Audio
    SDLVty
  build-depends:

    base >= 4.7 && < 4.9
    , sdl2 >= 1.3.1 && < 1.4
    , transformers >= 0.4
    , containers
    , random-shuffle >= 0.0.4
    , MonadRandom
    , time
    , warp
    , wai
    , http-types
    , text
    , bytestring
    , stm
    , network-info
    
    , glory-resources

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded
  extra-libraries:      SDL2_mixer

  if flag(SDLDisplay)
    other-modules:
      SDLVty
    build-depends:
      sdl2-ttf
    cpp-options:
      -DSDL_DISPLAY
  else
    build-depends:
      vty
