name:                 glory-resources
version:              0.1.0.0
build-type:           Simple
cabal-version:        >= 1.10
extra-source-files:
  remote/index.html
  sound/*.wav
  sound/papers/*.wav
  sound/pinball/*.WAV
  04B03-U--misaki_gothic.ttf

library
  exposed-modules:
    Resources
  build-depends:

    base >= 4.7 && < 4.9
    , file-embed
    , bytestring

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall

